@@ -1,3 +1,6 @@
+2024-11-05  Markus Gans  <guru.mail@muenster.de>
+	* Added the getSelf() method to FObject
+
 2024-09-21  Markus Gans  <guru.mail@muenster.de>
 	* Change the widget color theme for non-focused list items
 
